@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -66,8 +66,8 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  */
 class DefaultServerRequestTests {
 
-	private final List<HttpMessageConverter<?>> messageConverters = Collections.singletonList(
-			new StringHttpMessageConverter());
+	private final List<HttpMessageConverter<?>> messageConverters = List.of(new StringHttpMessageConverter());
+
 
 	@Test
 	void method() {
@@ -84,8 +84,7 @@ class DefaultServerRequestTests {
 		servletRequest.setScheme("https");
 		servletRequest.setServerPort(443);
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.uri()).isEqualTo(URI.create("https://example.com/"));
 	}
@@ -95,8 +94,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/path", true);
 		servletRequest.setQueryString("a=1");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		URI result = request.uriBuilder().build();
 		assertThat(result.getScheme()).isEqualTo("http");
@@ -111,8 +109,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setAttribute("foo", "bar");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.attribute("foo")).isEqualTo(Optional.of("bar"));
 	}
@@ -122,8 +119,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "bar");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.param("foo")).isEqualTo(Optional.of("bar"));
 	}
@@ -137,8 +133,7 @@ class DefaultServerRequestTests {
 		servletRequest.addPart(formPart);
 		servletRequest.addPart(filePart);
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		MultiValueMap<String, Part> result = request.multipartData();
 
@@ -152,8 +147,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.param("foo")).isEqualTo(Optional.of(""));
 	}
@@ -163,8 +157,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.param("bar")).isEqualTo(Optional.empty());
 	}
@@ -173,11 +166,9 @@ class DefaultServerRequestTests {
 	void pathVariable() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.pathVariable("foo")).isEqualTo("bar");
 	}
@@ -186,25 +177,20 @@ class DefaultServerRequestTests {
 	void pathVariableNotFound() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				request.pathVariable("baz"));
+		assertThatIllegalArgumentException().isThrownBy(() -> request.pathVariable("baz"));
 	}
 
 	@Test
 	void pathVariables() {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.pathVariables()).isEqualTo(pathVariables);
 	}
@@ -212,8 +198,7 @@ class DefaultServerRequestTests {
 	@Test
 	void header() {
 		HttpHeaders httpHeaders = new HttpHeaders();
-		List<MediaType> accept =
-				Collections.singletonList(MediaType.APPLICATION_JSON);
+		List<MediaType> accept = Collections.singletonList(MediaType.APPLICATION_JSON);
 		httpHeaders.setAccept(accept);
 		List<Charset> acceptCharset = Collections.singletonList(UTF_8);
 		httpHeaders.setAcceptCharset(acceptCharset);
@@ -230,8 +215,7 @@ class DefaultServerRequestTests {
 		httpHeaders.forEach(servletRequest::addHeader);
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		ServerRequest.Headers headers = request.headers();
 		assertThat(headers.accept()).isEqualTo(accept);
@@ -250,8 +234,7 @@ class DefaultServerRequestTests {
 		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setCookies(cookie);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		MultiValueMap<String, Cookie> expected = new LinkedMultiValueMap<>();
 		expected.add("foo", cookie);
@@ -266,8 +249,7 @@ class DefaultServerRequestTests {
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 		servletRequest.setContent("foo".getBytes(UTF_8));
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		String result = request.body(String.class);
 		assertThat(result).isEqualTo("foo");
@@ -280,10 +262,10 @@ class DefaultServerRequestTests {
 		servletRequest.setContent("[\"foo\",\"bar\"]".getBytes(UTF_8));
 
 		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				Collections.singletonList(new MappingJackson2HttpMessageConverter()));
+				List.of(new MappingJackson2HttpMessageConverter()));
 
 		List<String> result = request.body(new ParameterizedTypeReference<List<String>>() {});
-		assertThat(result.size()).isEqualTo(2);
+		assertThat(result).hasSize(2);
 		assertThat(result.get(0)).isEqualTo("foo");
 		assertThat(result.get(1)).isEqualTo("bar");
 	}
@@ -294,11 +276,10 @@ class DefaultServerRequestTests {
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 		servletRequest.setContent("foo".getBytes(UTF_8));
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, Collections.emptyList());
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, Collections.emptyList());
 
-		assertThatExceptionOfType(HttpMediaTypeNotSupportedException.class).isThrownBy(() ->
-				request.body(String.class));
+		assertThatExceptionOfType(HttpMediaTypeNotSupportedException.class)
+				.isThrownBy(() -> request.body(String.class));
 	}
 
 	@Test
@@ -307,11 +288,9 @@ class DefaultServerRequestTests {
 		MockHttpSession session = new MockHttpSession();
 		servletRequest.setSession(session);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.session()).isEqualTo(session);
-
 	}
 
 	@Test
@@ -320,8 +299,7 @@ class DefaultServerRequestTests {
 		Principal principal = () -> "foo";
 		servletRequest.setUserPrincipal(principal);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.principal().get()).isEqualTo(principal);
 	}
